stylesheets/index.css
:root {
    margin: 0;
    padding: 0;
    font-size: 16px;
}

a {
    text-decoration: none;
    color: white;
}

ul {
    list-style-type: none;
}

.text-white {
    color: white;
}

.bg-white {
    background-color: #fff;
}

h1 {
    font-family: 'loos-normal', helvetica, arial;
    font-weight: 500;
    font-style: normal;
}

h2 {
    font-family: 'loos-normal', helvetica, arial;
    font-weight: 500;
    font-style: normal;
}

h3 {
    font-family: 'Gill Sans MT', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
    font-weight: 600;
}

p {
    font-family: 'transducer', sans-serif;
    font-weight: 400;
}

body {
    background-color: #ECECEC;
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

.text-padding {
    padding: 1rem;
}

.emphasize-text {
    font-family: 'loos-normal', sans-serif;
    font-weight: 500;
    font-style: normal;
    display: block;
    font-size: clamp(0.4rem, 4.5vw, 2.1rem);
    padding-top: 0.2rem;
}

.h-two-fonts {
    font-family: 'transducer', sans-serif;
    font-weight: 400;
    font-size: clamp(0.2rem, 3vw, 1.2rem);
    color: #272C32;
}

.auto-margin {
    margin: clamp(0.5rem, 5vw, 3rem);
}
.text-margin-left {
    margin-left: 1rem;
}

.home-h1 {
    color: #00337E;
}

.home-container1 {
    background-image: url(/images/background/museum-hall.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    padding: 1rem;
}

.home-box1, .home-box2, .home-box3 {
    margin: 2em;
}

.home-box2 {
    display: grid;
    grid-template-rows: 1fr;
    grid-template-columns: 2fr 1fr;
    background-size: cover;
}

.img-home-box2 {
    max-height: 250px;
}

.button-header-wrap {
    display: flex;
    justify-content: space-evenly;
}

.img-auto-scale {
    height: auto;
    width: 100%;
    vertical-align: bottom;
}

.button1 {
    display: inline-block;
    background-color: #00337E;
    color: #fff;
    font-family: 'loos-normal', sans-serif;
    border: solid 2px #00337E;
    font-weight: 300;
    font-size: 1rem;
    text-align: center;
    border-radius: 10px;
    padding: 10px 7px;
    height: 15px;
    width: 130px;
}

.button2 {
    display: inline-block;
    background-color: #EEF5FF;
    border: solid 2px #272C32;
    color: black;
    font-weight: 300;
    font-size: 1rem;
    text-align: center;
    border-radius: 10px;
    padding: 10px 7px;
    height: 15px;
    width: 130px;
}

.button-flex-wrap {
    margin-left: 1rem;
}

    /* About page */
.about-container {
    margin: 0 auto;
    margin-top: 2rem;
}

.about-h1-img-wrap {
    position: relative;
    text-align: center;
    display: flex;
    flex-direction: column;
    max-width: 650px;
    color: #E8E9C7;
}

.about-h1 {
    position: absolute;
    top: 9%;
    left: 40%;
    font-family: 'cormorant-garamond', serif, sans-serif;
    font-weight: 700;
    font-size: clamp(1rem, 4vw, 2rem);
}

.about-img-staff {
    height: auto;
    width: clamp(150px, 650px, 100%);
}

.about-paragraph {
    background-color: #fff;
    max-width: 700px;
    margin-bottom: 2rem;
    padding: 1rem;
    grid-area: text;
}

/* job page */
.job-page-container {
    margin: 0 auto;
    width: fit-content;
    margin-top: 2rem;
}

.job-text-padding {
    padding: 0.5rem 2rem;
}

.job-text-adjust {
    max-width: 800px;
}
.job-img-adjust {
    max-width: 900px;
}
/* courses */
.course-container-flex-wrap {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    margin: 1rem;
}

.course-box-flex-wrap {
    display: flex;
}

.course-box, .courses-h1-img-wrap {
    margin: 1rem;
}

.courses-flex-container {
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
}
.courses-h2-img-wrap {
    display: flex;
}
.courses-text-adjust {
    max-width: 650px;
    padding: 1rem;
}
.courses-h1-img-wrap {
    position: relative;
    text-align: center;
    border: solid 1px #404F60;
}
.courses-h1 {
    position: absolute;
    font-family: 'cormorant-garamond', serif, sans-serif;
    font-size: clamp(1.5rem, 3vw, 4rem);
    top: 60%;
    left: 50%;
    transform: translate(-50%, -40%);
    color: #2D3B4D;
}

.h2-grey {
    color: #2D3B4D;
}

/* visit page */
.h1-visit {
    font-size: clamp(0.5rem, 3vw, 2.5rem);
    margin: 1rem 0 0 1rem;
}
.visit-grid-container {
    display: grid;
    grid-template-areas: "tesla tesla vr"
                         "lab robot vr";
    max-height: 510px;
    overflow: hidden;
}

.img-fixed2-scale {
    height: auto;
    width: clamp(100px, 100%, 648px);
}

.img-fixed-scale {
    height: auto;
    width: clamp(100px, 100%, 600px);
}

.tesla {
    grid-area: tesla;
}
.vr {
    grid-area: vr;
}
.lab {
    grid-area: lab;
}
.robot {
    grid-area: robot;
}

.visit-h-time-container {
    display: grid;
    grid-template-areas: "h1 p";
    color: #00337E;
    font-size: clamp(0.5rem, 3vw, 1.5rem);
    position: relative;
    max-height: 260px;
    margin-bottom: 1rem;
}

.opening-hours {
    display: flex;
    font-family: 'transducer', sans-serif;
    grid-area: p;
    justify-content: end;
    margin-right: -10%;
    padding-bottom: 1.8rem;
}
.opening-hours-h {
    transform: rotate(90deg);
    white-space: nowrap;
    width: 1px;
    height: 1px;
    margin-bottom: 55%;
    margin-top: -10%;
    margin-left: 5%;
    padding-left: 25%;
}

.opening-time {
    min-width: 110px;
    white-space: nowrap;
}

.h-blue {
    color: #00337E;
}

.visit-location-text {
    max-width: 900px;
    padding: 1rem;
}

.visit-contact-wrap {
    border: solid 1px #00337E;
    padding: 1rem;
}

    @media (max-width: 330px) {
        .img-fixed2-scale {
            max-height: 109px;
        }}
        @media (max-width: 1000px) {
            .home-box2 {
                display: grid;
                grid-template-rows: 1fr;
                grid-template-columns: 2fr 1fr;
            }}

@media (max-width: 1400px) {
    .auto-margin {
        margin: clamp(0.5rem, 2vw, 2rem);
    }
}
@media (max-width: 1600px) {

    .course-box-flex-wrap {
        flex-direction: column;
    }}

@media (min-width: 800px) {
    .home-container1 {
        display: flex;
    }
    .home-container2 {
        display: flex;
    }
    .courses-grid-container {
        display: grid;
        grid-template-columns: 2fr 1fr;
    }

    .course-box, .courses-h1-img-wrap {
        margin: 2rem 8rem 2rem 8rem;
    }}
    @media (min-width: 900px) {
        .about-container {
            display: grid;
            grid-template-areas: "img contact"
                                 "text text";
        }
        .visit-contact-location-wrap {
            display: flex;
            justify-content: space-between;
            padding: 1rem;
        }}

    @media (min-width: 1000px) {
        .course-box, .courses-h1-img-wrap {
            margin: 2rem 10rem 2rem 10rem;
        }}

        @media (min-width: 1500px) {
            .course-box, .courses-h1-img-wrap {
                margin: 2rem 20rem 2rem 20rem;
            }}

